Update jv script

--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,9 @@ body {
 h1 {
   font-family: "Rock 3D", cursive;
 }
+.description {
+  text-transform: capitalize;
+}
 .humidity {
   color: #781d42;
 }
